# mmorpg

./: .gitignore
client/: index.html  package-lock.json  package.json
client/public/assets/: atlas.json
client/src/: main.js
client/src/network/: BinaryReader.js  BinaryWriter.js  parsers.js
client/src/renderer/: SpriteManager.js  TilemapRenderer.js
client/tests/network/: creature_move.test.js
client/tests/renderer/: tilemap.test.js
docs-site/: index.html  package-lock.json  package.json
docs-site/src/: App.tsx  index.css
docs-site/src/components/: PageRenderer.tsx  Sidebar.tsx
docs-site/src/content/: roadmap.json
docs-site/src/content/devlog/: f1-1-binary-parsers.md  f1-2-map-render.md  f1-otclient-lean.md  f2-antigravity-architecture.md  setup-dependencies.md
docs-site/src/data/: content.ts
scripts/: setup_deps.ps1
server/: CMakeLists.txt
server/src/: main.cpp  test_client.js
tools/asset-stripper/: index.js  package.json
